<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Web Comic Shelf</string>
    <string name="title_website_detail">Website Detail</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tester">TesterActivity</string>
    <string name="title_comic_list">Comics</string>
    <string name="title_comic_detail">Comic Detail</string>
    <string name="title_activity_add_comic">AddComicActivity</string>
    <string name="UpdateAll">Update</string>
    <string name="AddComicButton">Add Comic</string>
    <string name="Viewcomics">View Comics</string>
    <string name="menu_settings">Settings</string>
    <string name="UrlHint">http://www.webcomic.com/comics</string>
    <string name="AddComic">Add Comic</string>
    <string name="Url">Url</string>
    <string name="ComicName">Comic Name</string>
    <string name="Name">Name</string>
    <string name="addComicBookmarkTitle">Add from bookmark</string>
    <string name="ViewAltText">Alt Text</string>
    <string name="VisitSite">Website</string>
    <string name="title_activity_comic_gallery">ComicGalleryActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="selectComic">Select Comic</string>

</resources>
