<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Add_Comic_Webview" >

    <WebView
        android:id="@+id/AddComicWebView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/AddComicWebButton"
        android:layout_below="@+id/AddComicWebEdit"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/AddComicWebButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AddComicWebView"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/AddComicWebView"
        android:text="@string/AddComic" />

    <EditText
        android:id="@+id/AddComicWebEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/AddComicWebTextUrl"
        android:layout_alignBottom="@+id/AddComicWebTextUrl"
        android:layout_alignRight="@+id/AddComicWebView"
        android:layout_toRightOf="@+id/AddComicWebTextName"
        android:ems="10"
        android:hint="@string/UrlHint"
        android:imeOptions="actionDone"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/AddComicWebTextUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AddComicWebView"
        android:layout_below="@+id/AddComicWebEditName"
        android:layout_marginTop="21dp"
        android:text="@string/Url" />

    <EditText
        android:id="@+id/AddComicWebEditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AddComicWebEdit"
        android:layout_alignRight="@+id/AddComicWebEdit"
        android:ems="10"
        android:hint="@string/ComicName" />

    <TextView
        android:id="@+id/AddComicWebTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AddComicWebTextUrl"
        android:layout_alignBaseline="@+id/AddComicWebEditName"
        android:layout_alignParentTop="true"
        android:text="@string/Name" />

</RelativeLayout>